# Converter

./: CMakeLists.txt  Readme.txt
Visualization/: CConverter.cpp  CConverter.h  CDlgWarning.cpp  CDlgWarning.h  CLineEdit.cpp  CLineEdit.h  CMainWindow.cpp  CMainWindow.h  CMakeLists.txt  CMathUtils.h  CWdgConvertPage.cpp  CWdgConvertPage.h  CWdgFileNamesReader.cpp  CWdgFileNamesReader.h  CWdgGroupDelayPage.cpp  CWdgGroupDelayPage.cpp.autosave  CWdgGroupDelayPage.h  UBaseTypes.h  VisualizationStable.h  main.cpp
